# streetSignsIdentifier

./: .gitignore  .~lock.T1.docx#  CMakeLists.txt  README.md  assignement.docx  cascadeNoParkingHaar12_350pos_sqMax.xml  cascadeNoParkingHaar9_360pos_sqMax.xml  cascadeRedCirclesHaar12_1250pos.xml  cascadeWarningHaar12_690pos.xml  cascadeWarningHaar15_1800pos.xml  cascadeWarningLbp10Stage.xml  cascadeWarningLbp10_650pos.xml  cascadeWarningLbp6_650pos.xml  cascadeWarningLbp9_650pos_squared.xml
dataset/: testannotation.txt  tst
otherCascades/: cascadeNoParkingLbp9_350pos_sqMax.xml  cascadeNoParkingLbp9_350pos_squared.xml  cascadeWarningHaar12_700pos_moreBg.xml  cascadeWarningHaar8Stage.xml
report/: .report.tex.kate-swp  report.aux  report.tex  report.tex.backup
src/: StreetSign.cpp  StreetSign.hpp  StreetSign_NoParking.cpp  StreetSign_NoParking.hpp  StreetSign_Speed.cpp  StreetSign_Speed.hpp  StreetSign_Warning.cpp  StreetSign_Warning.hpp  StreetSignsIdentifier.cpp  StreetSignsIdentifier.hpp  annotationsTranslator.py  main.cpp  utils.cpp  utils.hpp
